[project]
name = "meta-abstention"
version = "0.1.0"
description = ""
authors = [
    {name = "khaes-kth",email = "khaes@kth.se"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.0.0",
    "openai>=1.0.0",
]


[project.scripts]
meta-abstention = "meta_abstention.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
